--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/oxrc/itstep_jscript#readme",
   "dependencies": {
     "express": "^4.15.3",
-    "express-vue": "^3.14.3"
+    "express-vue": "^3.14.3",
+    "path": "^0.12.7"
   }
 }
