--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "express": "^4.15.3",
     "express-vue": "^3.14.3",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "sqlite3": "^3.1.8"
   }
 }
