--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "express-vue": "^3.14.3",
     "path": "^0.12.7",
     "sqlite3": "^3.1.8"
+  },
+  "devDependencies": {
+    "vue": "^2.3.4"
   }
 }
