--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
-  "name": "angular-io-example",
+  "name": "itstep_jscript",
   "version": "1.0.0",
+  "description": "Homework Team project for ITStep Academy",
+  "main": "index.js",
   "private": true,
-  "description": "Example project from an angular.io guide.",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/oxrc/itstep_jscript.git"
+  },
+  "homepage": "https://github.com/oxrc/itstep_jscript#readme",
   "scripts": {
     "test:once": "karma start karma.conf.js --single-run",
     "build": "tsc -p src/",
@@ -23,8 +29,8 @@
     "lint": "tslint ./src/**/*.ts -t verbose"
   },
   "keywords": [],
-  "author": "",
-  "license": "MIT",
+  "author": "The TEAM",
+  "license": "ISC",
   "dependencies": {
     "@angular/animations": "~4.2.0",
     "@angular/common": "~4.2.0",
@@ -41,8 +47,13 @@
     "@angular/upgrade": "~4.2.0",
     "angular-in-memory-web-api": "~0.3.2",
     "core-js": "^2.4.1",
+    "express": "^4.15.3",
+    "express-vue": "^3.14.3",
+    "path": "^0.12.7",
     "rxjs": "^5.1.0",
+    "sqlite3": "^3.1.8",
     "systemjs": "0.19.39",
+    "tough-cookie": "^2.3.2",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
@@ -81,13 +92,5 @@
     "source-map-explorer": "^1.3.2",
     "tslint": "^3.15.1",
     "typescript": "~2.3.2"
-  },
-  "homepage": "https://github.com/oxrc/itstep_jscript#readme",
-  "dependencies": {
-    "express": "^4.15.3",
-    "sqlite3": "^3.1.8"
   }
-
-  "repository": {}
-
 }
