--- a/package.json
+++ b/package.json
@@ -60,7 +60,9 @@
     "babel-preset-angular2": "^0.0.2",
     "babel-preset-es2015": "^6.16.0",
     "canonical-path": "0.0.2",
+    "child_process": "^1.0.2",
     "concurrently": "^3.0.0",
+    "express": "^4.15.3",
     "http-server": "^0.9.0",
     "jasmine": "~2.4.1",
     "jasmine-core": "~2.4.1",
@@ -72,15 +74,19 @@
     "karma-phantomjs-launcher": "^1.0.2",
     "lite-server": "^2.2.2",
     "lodash": "^4.16.2",
+    "path": "^0.12.7",
     "phantomjs-prebuilt": "^2.1.7",
     "protractor": "~5.1.0",
+    "querystring": "^0.2.0",
     "rollup": "^0.41.6",
     "rollup-plugin-commonjs": "^8.0.2",
     "rollup-plugin-node-resolve": "2.0.0",
     "rollup-plugin-uglify": "^1.0.1",
     "source-map-explorer": "^1.3.2",
+    "sqlite3": "^3.1.8",
     "tslint": "^3.15.1",
-    "typescript": "~2.3.2"
+    "typescript": "~2.3.2",
+    "url": "^0.11.0"
   },
   "repository": {}
 }
