--- a/package.json
+++ b/package.json
@@ -46,12 +46,13 @@
     "@angular/tsc-wrapped": "~4.2.0",
     "@angular/upgrade": "~4.2.0",
     "angular-in-memory-web-api": "~0.3.2",
+    "bcrypt": "^1.0.3",
     "core-js": "^2.4.1",
     "express": "^4.15.3",
     "express-vue": "^3.14.3",
     "path": "^0.12.7",
     "rxjs": "^5.1.0",
-    "sqlite3": "^3.1.8",
+    "sqlite3": "^3.1.11",
     "systemjs": "0.19.39",
     "tough-cookie": "^2.3.2",
     "zone.js": "^0.8.4"
